# template-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  Containerfile.base  Makefile  README.md  aegra.json  compose.yaml  cookiecutter.json  pyproject.toml  test_otel_alert.py
.github/workflows/: build-base-image.yml  pre-commit.yml  test.yml
config/agent/: PROMPT.md  mcp.json
config/agent/evals/: README.md
config/agent/runtime/: agent.yaml  observability.yaml  secrets.example.yaml  ui.yaml
config/agent/subagents/: analyst.md  publisher.md
config/deployment/: values.yaml
deep_agent/aegra/: __init__.py  auth.py  converters.py  feedback.py  graph.py  health.py  http_app.py  mcp.py  mcp_auth.py  mcp_crypto.py  mcp_oauth_handlers.py  mcp_oauth_scopes.py  mcp_routes.py  mcp_token_store.py  mcp_tool_auth.py  middleware.py  nodes.py  otel.py  redis.py  serialization.py  shutdown.py  startup.py  state.py  telemetry.py
deep_agent/src/: error_handling.py  exceptions.py  schema.py  settings.py
deep_agent/src/adapters/: langchain.py
deep_agent/src/agent/: __init__.py  llm.py  provider_factory.py
deep_agent/src/cache/: __init__.py  backend.py  config.py  metrics.py  model_cache.py  multi_layer.py  personalization_cache.py  warming.py
deep_agent/src/feedback/: __init__.py  repository.py
deep_agent/src/infrastructure/: __init__.py  async_tasks.py  backend.py  mcp.py  middleware.py  permissions.py  providers.py  subagents.py
deep_agent/src/memory/: __init__.py  clustering.py  config.py  consolidation.py  relationships.py  scheduler.py  scoring.py
deep_agent/src/observability/: otel_setup.py
deep_agent/src/personalization/: __init__.py  injector.py  models.py  repository.py
deep_agent/src/streaming/: __init__.py  context.py  converter.py  deduplicator.py  handlers.py  tracker.py
deep_agent/src/token_budget/: __init__.py  callback.py  config.py  identity.py  mongo_repository.py  otel_emit.py  (+1 more)
deep_agent/utils/: google_creds.py  pylogger.py
demo_configs/: orchestrator.md
demo_configs/subagents/: analyst.md  coder.md  researcher.md
deployment/base/: configmap.yaml  kustomization.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml
deployment/openshift/: configmap.yaml  deployment.yaml  service.yaml
docs/: observability.md
runtime/: __init__.py  config_loader.py
scripts/: aegra-deploy.sh  postgres-init.sql  start-mock-mcp.sh  sync-deployment-config.sh
template_agent/agent_config/: mcp.json  system-prompt.md
template_agent/src/: exceptions.py  main.py  schema.py  settings.py
template_agent/utils/: google_creds.py
tests/: conftest.py  test_settings.py
tests/agents/: conftest.py  llm_judge.py  mock_tools.py  subagent_loader.py  test_analyst.py  test_orchestrator.py  test_publisher.py
tests/mocks/: mock_mcp_server.py
tests/skills/: conftest.py  llm_judge.py  test_skills.py
tests/unit/: conftest.py  test_error_handling.py  test_exceptions.py  test_hitl.py  test_infrastructure_middleware.py  test_personalization.py  test_pylogger.py  test_repository.py  test_schema.py  test_settings.py
{{cookiecutter.project_slug}}/: .cruft.json  .env.example  .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_settings.py
(+178 files in other folders)
