[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_agent"]

[project]
name = "template-agent"
version = "0.1.0"
description = "A template for Model Context Protocol (MCP) server development"
readme = "README.md"
keywords = ["mcp", "template", "server"]
requires-python = ">=3.12.2,<3.13"
dependencies = [
    "deepagents==0.4.12",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "langchain-google-genai==4.2.2",
    "langchain-google-vertexai==3.2.2",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters==0.2.2",
    "langfuse==4.6.1",
    "langgraph-checkpoint-postgres==3.0.5",
    "langgraph-sdk>=0.1.51",
    "aegra-cli",
    "psycopg[binary,pool]==3.3.3",
    "psycopg2-binary==2.9.11",
    "structlog==25.5.0",
    "pyyaml==6.0.3",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0,<10",
    "redis>=5.0.0,<7",
    "cachetools>=5.5.0,<6",
    "apscheduler>=4.0.0a5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock>=3.14.0",
    "ruff==0.12.2",
    "mypy==1.16.1",
    "pre-commit==4.2.0",
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/redhat-data-and-ai/template-agent"
Repository = "https://github.com/redhat-data-and-ai/template-agent"
Issues = "https://github.com/redhat-data-and-ai/template-agent/issues"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "W", "F", "I", "F401"]
lint.ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "asyncio",
    "unit: fast isolated unit tests",
    "integration: tests requiring external services or multi-component interaction",
    "skills: marks tests as skill evaluation tests (deselect with '-m \"not skills\"')",
    "e2e: end-to-end tests requiring a running aegra server",
    "slow: tests that take more than 30 seconds",
]

[tool.coverage.run]
source = ["deep_agent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
